fix: long names in Monitors aren't truncated #50

--- a/cpn-ide-front/src/app/project-tree/tree-node/tree-node.scss
+++ b/cpn-ide-front/src/app/project-tree/tree-node/tree-node.scss
@@ -21,6 +21,9 @@
 
 .title {
   float: none;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .bold {
